# csd_jwt

./: Cargo.toml  README.md  _appendix_plots.ipynb  _appendix_plots.py  _paper_plots.ipynb  _paper_plots.py  requirements.txt
csv_dir/: 100_vp_issuance_duration.csv  100_vp_jwt_length.csv  100_vp_verification_duration.csv  10_vp_issuance_duration.csv  10_vp_jwt_length.csv  10_vp_verification_duration.csv  20_vp_issuance_duration.csv  20_vp_jwt_length.csv  20_vp_verification_duration.csv  30_vp_issuance_duration.csv  30_vp_jwt_length.csv  30_vp_verification_duration.csv  40_vp_issuance_duration.csv  40_vp_jwt_length.csv  40_vp_verification_duration.csv  50_vp_issuance_duration.csv  50_vp_jwt_length.csv  50_vp_verification_duration.csv  60_vp_issuance_duration.csv  60_vp_jwt_length.csv  60_vp_verification_duration.csv  70_vp_issuance_duration.csv  70_vp_jwt_length.csv  70_vp_verification_duration.csv  80_vp_issuance_duration.csv  80_vp_jwt_length.csv  80_vp_verification_duration.csv  90_vp_issuance_duration.csv  90_vp_jwt_length.csv  90_vp_verification_duration.csv  initialization_duration.csv  issuer_keypair_length.csv  vc_issuance_duration.csv  vc_jwt_length.csv  vc_verification_duration.csv
src/: benchmark.rs  common_data.rs  csv_writer.rs  display.rs  lib.rs  main.rs
src/adapters/: adapter.rs  mod.rs
src/adapters/accumulators/: csd_jwt_adapter.rs  mod.rs
src/adapters/hashes/: merkle_tree_adapter.rs  mod.rs  sd_jwt_adapter.rs
src/adapters/signatures/: bbs_plus_adapter.rs  mod.rs
src/sd_algorithms/: mod.rs  sd_algorithm.rs
src/sd_algorithms/hashes/: mod.rs  (+1 more)
(+5 files in other folders)
